--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.15",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
