--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.3",
     "@floating-ui/react": "^0.26.25",
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.59.13",
@@ -25,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.7",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
